test/testdata/for/break_inside_nested_anonymous_function_error.lox
for (;;) {
  fun() {
    break; // error: 'break' can only be used inside a loop
  }();
  break;
}
